@@ -18,6 +18,7 @@ Version 2.7.4
 
 - Fixed infinite loop in SML lexer (#1625)
 - Fixed backtracking string regexes in JavaScript/TypeScript lexers (#1637)
+- Limit recursion with nesting Ruby heredocs (#1638)
 
 
 Version 2.7.3
